fixed balances when cancel orders

--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
@@ -84,7 +84,7 @@
 
     <app-embedded-open-orders
       *ngIf="mainTab === 'open'"
-      (refreshOpenOrders)="toOpenOrders()"
+      (refreshOpenOrders)="refreshOpenOrders()"
       [makeHeight]="makeHeight"
       [openOrders]="openOrders">
     </app-embedded-open-orders>
