--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
         <div class="avaliable avaliable--aifl">
-          <span>{{'Avaliable:' | translate}} </span>
+          <span>{{'Available:' | translate}} </span>
           <a style="cursor: pointer" (click)="calculateAmountByTotalWithCommission(BUY)">{{userBalance?.cur2?.balance || 0 | roundCurrency:userBalance?.cur2?.name | formatCurrency}} {{userBalance?.cur2?.name || ''}}</a>
         </div>
       </div>
@@ -110,7 +110,7 @@
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
         <div class="avaliable avaliable--aifl">
-          <span>{{'Avaliable:' | translate}} </span>
+          <span>{{'Available:' | translate}} </span>
           <a style="cursor: pointer" (click)="calculateAmountByTotalWithCommission(SELL)">{{userBalance?.cur1?.balance || 0 | roundCurrency:userBalance?.cur1?.name | formatCurrency}} {{userBalance?.cur1?.name}}</a>
         </div>
       </div>
