--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -210,7 +210,10 @@ perfect-scrollbar{
     &.send__wrap-input {
       app-price-input {
         label {
+          @media(min-width: 1200px){
+
           background-color: #fff !important;
+          }
         }
       }
     }
