--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
@@ -31,6 +31,9 @@
       top: -16px;
       font-size: 12px;
       line-height: 14px;
+      @media(max-width: 1199px){
+        color:#DEDEFB;
+      }
     }
   }
   &__line {
@@ -56,6 +59,9 @@
     width: 50%;
     text-align: right;
     font-weight: bold;
+    @media(max-width: 1199px){
+        color:#DEDEFB;
+      }
   }
   &__merchant-comission {
     display: block;
@@ -216,7 +222,10 @@ perfect-scrollbar{
     &.send__wrap-input {
       app-price-input {
         label {
+          @media(min-width: 1200px){
+
           background-color: #fff !important;
+          }
         }
       }
     }
