--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -8,7 +8,8 @@
         <div class="select__value select__value--active"
              (click)="toggleCurrencyDropdown()"
              [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}">
-          <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon">
+          <img [src]="activeFiat.name | getIconUrl:true" class="select__list-item-icon select__list-item-icon--mobile">
+          <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon select__list-item-icon--destop">
           {{activeFiat.name}}
         </div>
         <div class="select__label">Currency</div>
