--- a/src/assets/scss/pages/dashboard/_orders.scss
+++ b/src/assets/scss/pages/dashboard/_orders.scss
@@ -11,11 +11,14 @@
 			height: 2px;
 			bottom: 0;
 			background-color: transparent;
+			display: block;
 
 		}
 		&--active{
 			&::after{
+
 			background-color: #237BEF;
+			display: block!important;
 		}
 		}
 		
