--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,7 +41,7 @@
         </a>
       </li>
       <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated">
-        <a class="menu__link menu__link&#45;&#45;drop">
+        <a class="menu__link menu__link--drop">
           <span class="menu__link-text">{{'Funds' | translate}}</span>
         </a>
         <!-- <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a> -->
@@ -60,8 +60,8 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated">
-        <a class="menu__link menu__link&#45;&#45;drop">
+      <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated">
+        <a class="menu__link menu__link--drop">
           <span class="menu__link-text">{{'Orders' | translate}}</span>
         </a>
         <!-- <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a> -->
@@ -90,8 +90,8 @@
       </li> -->
     </ul>
     <ul class="community-wr">
-      <li class="menu__item menu__item&#45;&#45;with-submenu">
-        <a class="menu__link menu__link&#45;&#45;drop">
+      <li class="menu__item menu__item--with-submenu">
+        <a class="menu__link menu__link--drop">
           <span class="menu__link-text">Community</span>
         </a>
         <div class="submenu">
