--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -65,7 +65,9 @@
 
         <app-price-input [placeholder]="'Amount'"
                          formControlName="amount"
-                         name="amount">
+                         name="amount"
+                         class="fiat-amount">
+
         </app-price-input>
 
         <div class="wrap-input__message--show">
