--- a/src/app/dashboard/components/trade-history/trade-history-item/trade-history-item.component.scss
+++ b/src/app/dashboard/components/trade-history/trade-history-item/trade-history-item.component.scss
@@ -1,5 +1,14 @@
+ .ps__rail-y{
+ 	@media(max-width: 1199px){
+		margin-right: 5px!important;
+ 	}
+ }
  .table__cell {
  	padding: 8px 5px 8px 5px;
+ 	@media(max-width: 1199px){
+ 		padding: 4px 5px 4px 5px;
+
+ 	}
 
  }
 
