--- a/src/assets/scss/components/_overlay.scss
+++ b/src/assets/scss/components/_overlay.scss
@@ -3,6 +3,8 @@
   z-index: 1500;
   top: 0;
   left: 0;
+      bottom: 0;
+    right: 0;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
