--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -55,7 +55,7 @@
     //background-color: #fff;
     margin-right: 6px;
     img {
-      max-height: 100%;
+      height: 100%;
       max-width: 100%;
     }
   }
