--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -1,7 +1,7 @@
 <div class="settings__content">
   <h3 class="title settings__content-title">{{'Two-Factor authentication' | translate}}</h3>
   <div class="tfa__select-type">
-    <div class="subtitle settings__content-subtitle"> {{'Log in, Withdrawal, Inner transfer' | translate}}</div>
+    <div class="subtitle settings__content-subtitle"> {{'Use Google Authenticator to secure your account and funds operations: Withdrawals and Transfers' | translate}}</div>
   </div>
   <table class="table tfa__table">
     <!-- <thead>
@@ -11,7 +11,7 @@
     </tr>
     </thead> -->
     <tr>
-      <td class="table__cell"><span class="tfa__method">{{'Log in, Withdrawal, Inner transfer' | translate}}</span></td>
+      <td class="table__cell" style="padding-left: 0;"><span class="tfa__method">{{'Use Google Authenticator to secure your account and funds operations: Withdrawals and Transfers' | translate}}</span></td>
       <td class="table__cell" style="text-align:center">
         <!-- <label class="toggler settings__toggler"> -->
           <!-- <input type="checkbox"  [checked]="GAEnabled$ | async"> -->
