--- a/src/app/funds/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/funds/balance/send-money/send-successful/send-successful.component.html
@@ -12,7 +12,7 @@
   <div class="send-crypto" *ngIf="data.operation === SEND_CRYPTO || data.operation === SEND_FIAT">
     <div class="title send__successful-title">{{'Request was created' | translate}}!</div>
     <div class="subtitle send__successful-subtitle">
-      {{'You can track the progress in Pending requests table on ' | translate}}<a routerLink="/funds/transaction-history"
+      {{'You can track the progress in Pending requests table on ' | translate}}<a routerLink="/funds/balances"
                                                                  class="link">{{'Funds' | translate}}</a> {{'page' | translate}}.
     </div>
   </div>
@@ -44,8 +44,8 @@
       </button>
     </div>
     <div class="subtitle send__successful-subtitle">
-      {{'You can track the progress in Pending requests table on' | translate}} <a routerLink="/funds/transaction-history"
-                                                                 class="link">{{'Funds' | translate}}</a> {{'page' | translate}}.
+      {{'You can track the progress in Pending requests table on' | translate}}
+      <a routerLink="/funds/balances"class="link">{{'Funds' | translate}}</a> {{'page' | translate}}.
     </div>
   </div>
 
