--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -145,7 +145,7 @@
       padding: 0 20px;
     }
     &__item-title{
-      color:$grey;
+      color:#a0a0a0;
       margin-bottom: 8px;
     }
     &__you-have{
@@ -156,7 +156,7 @@
       display: inline-block;
       height: 17px;
       width: 1px;
-      background-color: $grey;
+      background-color:#a0a0a0;
       margin: 0 16px;
     }
   }
