--- a/src/app/funds/pending-request-mob/pending-request-mob.component.scss
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.scss
@@ -1,5 +1,12 @@
 @media(max-width: 1199px){
 .panding-input-wr{
 	padding: 0 12px;
+}
+
+.balance__currency{
+	align-items: center;
 }	
+.balance__currency-icon{
+	margin-bottom: 3px;
+}
 }
